--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <nav class="contenedor">
         <p class="logoMichi">
-            <img class="foto" src="assets/img/logoMichi.jpeg" alt="Logo Michi">𝑀𝒾𝒸𝒽𝒾𝒸𝑜 𝒮𝑜𝓃𝑒
+            <img class="foto" src="assets/img/logoMichi.jpeg" alt="Logo Michi">𝑀𝒾𝒸𝒽𝒾𝓀𝑜 𝒮𝑜𝓃𝑒
         </p>
         <p class="pH">
             <i class="fa-solid fa-bars" style="color: #00060f;"></i>
@@ -152,6 +152,7 @@
             <a href="https://www.facebook.com"><i class="fa-brands fa-facebook fa-xl"></i></a>
             <a href="https://instagram.com/michikosone?igshid=MmU2YjMzNjRlOQ=="><i class="fa-brands fa-instagram fa-xl"></i></a>
         </p>
+        <p>michikosone@gmail.com</p>
         <p>Todos los derechos reservados</p>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
